Issue#5427 feat: user and group list alignment in small devices

--- a/src/pages/user-and-groups/group-details/group-details.scss
+++ b/src/pages/user-and-groups/group-details/group-details.scss
@@ -22,6 +22,7 @@ page-group-member {
         padding-top: 0 !important;
         padding-bottom: 0 !important;
         padding-right: 0 !important;
+        padding-left:7% !important;
       }
       .advanced-menu ion-icon[item-end] {
             margin-top: 0 !important;
